2000-01-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* texinfo.tex: Update to version from texinfo-4.0.

	* interpreter/munge-texi.cc (process_texi_input_file): For Texinfo
	doc strings, automatically insert an @anchor{doc-SYMBOL} command
	just before the docstring for SYMBOL.

1999-12-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/munge-texi.cc (process_texi_input_file): Begin
	transformed files with `% DO NOT EDIT' instead of `@c DO NOT EDIT'
	to prevent problems with TeX not knowing the definition of @c
	before it is used.

1999-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (%.texi : %.txi): Suppress command echo.

1999-10-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (dist): Remove .texi files first, so
	they will have timestamps newer than the $(DOCSTRINGS) files.
	(%.texi : %.txi): Use mv instead of move-if-change.

	* interpreter/Map-s.cc: New file.
	* interpreter/munge-texi.cc: Use old libg++ Map class instead of
	STL map, for the benefit of systems that have assemblers that
	can't handle the long symbol names generated by g++ for
	map<string,string>.

1999-10-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/munge-texi.cc: Strip the "-*- texinfo -*-" marker
	when including help text.

	* interpreter/Makefile.in ($(TEXINFO)): Depend on $(DOCSTRINGS).
	($(DOCSTRINGS)): New rule.

	* Makefile.in (dist, bin-dist): Use `$(MAKE) -C dir' instead of
	`cd dir; $(MAKE); cd ..'.
	(../BUGS, ../INSTALL.OCTAVE, $(SUBDIRS)) Likewise.

	* interpreter/*.txi: Rename from *.txi.
	* interpreter/munge-texi.cc: New file.
	* interpreter/Makefile.in: Use it to create .texi files from .txi
	files and DOCSTRING files.

Fri Jun 18 23:17:02 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (octave_toc.html): Add -expandinfo to
	tex12html options.
	* liboctave/Makefile.in (liboctave_toc.html): Likewise.
	* faq/Makefile.in (Octave-FAQ_toc.html): Likewise.
